[gd_scene load_steps=5 format=3 uid="uid://bbmcxvjsp55f6"]

[ext_resource type="Theme" uid="uid://crsn8oneac34e" path="res://Themes/ComputerTheme.tres" id="1_e2x33"]
[ext_resource type="Script" path="res://Scripts/ConfidentialWindow.gd" id="1_rosrm"]
[ext_resource type="FontFile" uid="uid://dfgo3kpy7k61u" path="res://Fonts/Kenney Pixel.ttf" id="2_t6ws7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmiiy"]
bg_color = Color(0, 0.567689, 0.974727, 1)

[node name="Confidential" type="Window"]
title = "Password Protected"
position = Vector2i(0, 36)
size = Vector2i(300, 100)
unresizable = true
theme = ExtResource("1_e2x33")
theme_override_fonts/title_font = ExtResource("2_t6ws7")
theme_override_font_sizes/title_font_size = 32
script = ExtResource("1_rosrm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 300.0
offset_bottom = 85.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLEASE ENTER PASSWORD:"
horizontal_alignment = 1

[node name="PasswordEntry" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_length = 24

[node name="ResultText" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_dmiiy")
show_percentage = false

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_submitted" from="VBoxContainer/PasswordEntry" to="." method="TextSubmitted"]
